--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
       <div class="large-12 columns">
-        <h3>Welcome to Pivotal CF</h3>
+        <h3>Welcome to Pivotal CF. Version 2</h3>
         <hr/>
       </div>
     </div>
